force-app/main/default/objects/RequestLineItem__c/RequestLineItem__c.object-meta.xml
<CustomObject>
    <description>-</description>
    <label>Request Line Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Reference number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>