force-app/main/default/objects/RequestLineItem__c/fields/Kit__c.field-meta.xml
<CustomField>
    <fullName>Kit__c</fullName>
    <description>-</description>
    <inlineHelpText>-</inlineHelpText>
    <label>Kit</label>
    <referenceTo>KitVersion__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>