force-app/main/default/objects/RequestLineItem__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>-</description>
    <inlineHelpText>-</inlineHelpText>
    <label>Request</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>LineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>